Minor modification of optimization experiment and auth implementation