@@ -1,6 +1,3 @@
 ## Usage
-1. запустить модель
-2. gui/src/main/kotlin/main.kt - точка входа
-3. Environment -> Configuration -> Model Configuration: Load (app/src/main/resources/configuration.kts)
-4. Experimenter -> Task: Load (app/src/main/resources/experiment.kts)
-5. port=4444 -> Connect
+* Entry point: app/src/main/kotlin/Main.kt
+* Add to VM Options if Opt4j will be used: --add-opens java.base/java.lang=ALL-UNNAMED
